--- a/public/404.html
+++ b/public/404.html
@@ -27,7 +27,7 @@
   <body class="rainbow">
     <h1>Kawhooops! That's an error!</h1>
     <h2>Perhaps you meant to visit:</h2>
-    <h4><a href="/" id="redir">https://kahoot-jack.herokuapp.com/</a></h4>
+    <h4><a href="/" id="redir">https://kahoot.skermiebro.com/</a></h4>
     <style>
       body{
         text-align: center;
