--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Kahoot">
     <meta name="language" content="EN">
     <meta name="subject" content="Kahoot">
-    <meta name="topic" content="games">
+    <meta name="topic" content="education">
     <meta name="abstract" content="Kahoot">
     <meta name="designer" content="Kahoot">
     <meta name="owner" content="Kahoot">
