--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       "@context" : "http://schema.org",
       "@type" : "WebSite",
       "name" : "Kahoot",
-      "url" : "https://kahoot-jack.herokuapp.com/",
+      "url" : "https://kahoot.skermiebro.com/",
       "sameAs" : [
         "https://twitter.com/GetKahoot",
         "https://www.facebook.com/getkahoot",
@@ -61,7 +61,6 @@
       fbq('track', 'ViewContent');
     </script>
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="/ext/https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=1132344773559214&autoLogAppEvents=1"></script>
     <noscript>
       This web app requires JavaScript.
     </noscript>
