--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
       ]
     }
     </script>
-    
+    <script async src="/ext/https://apis.google.com/js/platform.js"></script>
     <script>
       fbq('track', 'ViewContent');
     </script>
