--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,11 @@
     }
     </script>
     <script async src="/ext/https://apis.google.com/js/platform.js"></script>
+      </head>		
+   <body class="rainbow" itemscope itemtype="https://schema.org/WebPage">		
+     <!-- Google Tag Manager (noscript) -->		
+     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHVPG7P"		
+     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <script>
       fbq('track', 'ViewContent');
     </script>
