--- a/public/index.html
+++ b/public/index.html
@@ -341,9 +341,9 @@
           </div>
         </div>
         <nav class="bottom mobishow">
-          <a href="kahoot-win.herokuapp.com/creator" title="Create Kahoots using all premium features!"><span class="mobihide2">Kahoot </span>Creator</a>
-          <a href="kahoot-win.herokuapp.com/api" title="Learn the Kahoot API"><span class="mobihide2">Kahoot </span>API<span class="mobihide2"> Docs</span></a>
-          <a href="kahoot-win.herokuapp.com/how-it-works" title="Learn how this website works">How<span class="mobihide2"> Kahoot Winner </span><span class="mobishow2"> it </span>Works</a>
+          <a href="https://kahoot-win.herokuapp.com/creator" title="Create Kahoots using all premium features!"><span class="mobihide2">Kahoot </span>Creator</a>
+          <a href="https://kahoot-win.herokuapp.com/api" title="Learn the Kahoot API"><span class="mobihide2">Kahoot </span>API<span class="mobihide2"> Docs</span></a>
+          <a href="https://kahoot-win.herokuapp.com/how-it-works" title="Learn how this website works">How<span class="mobihide2"> Kahoot Winner </span><span class="mobishow2"> it </span>Works</a>
         </nav>
         <!-- TODO: Add hover options -->
         <meta content="toggle" itemprop="result" itemtype="https://schema.org/ActivateAction"/>
