--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
     <meta name="keywords" content="kahoot, winner, website, correct, challenge, answers">
     <meta name="language" content="EN">
     <meta name="subject" content="Kahoot">
-    <meta name="topic" content="Games">
+    <meta name="topic" content="Education">
     <meta name="designer" content="Kahoot">
     <meta name="owner" content="Kahoot">
-    <meta name="Classification" content="Gaming">
+    <meta name="Classification" content="Education">
     <meta name="image" content="https://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
     <meta property="og:image:secure_url" content="https://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
     <meta property="og:image" content="http://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
