--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@ pagead/js/adsbygoogle.js"></script>
     <meta name="version" content="2.18.4">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Kahoot">
-    <meta name="description" content="Play Kahoot!">
+    <meta name="description" content="The Only Working Kahoot Winner">
     <meta name="keywords" content="kahoot, winner, website, correct, challenge, answers">
     <meta name="language" content="EN">
     <meta name="subject" content="Kahoot">
     <meta name="topic" content="Education">
-    <meta name="designer" content="Kahoot">
-    <meta name="owner" content="Kahoot">
+    <meta name="designer" content="Skermiebro">
+    <meta name="owner" content="Skermiebro">
     <meta name="Classification" content="Education">
     <meta name="image" content="https://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
     <meta property="og:image:secure_url" content="https://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
     <meta property="og:image" content="http://kahoot-win.herokuapp.com/resource/misc/screenshow.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://kahoot-win.herokuapp.com/">
-    <meta property="og:title" content="Play Kahoot!">
-    <meta property="og:description" content="Play Kahoot!">
+    <meta property="og:title" content="Win Kahoot!">
+    <meta property="og:description" content="Win Kahoot!">
     <meta property="og:type" content="website">
     <title>Play Kahoot! - Enter game PIN here!</title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
